# wia-standards-public

./: .gitignore  CLAUDE-CODE-GUIDE.md  LICENSE  README-header.md  README.md  index.html
3d-touch/api/rust/: Cargo.toml  README.md
3d-touch/api/rust/examples/: basic_usage.rs
3d-touch/api/rust/src/: client.rs  error.rs  lib.rs  types.rs  utils.rs  validators.rs
3d-touch/api/rust/tests/: integration_test.rs
WIA-AGING/api/rust/: Cargo.toml  README.md
WIA-AGING/api/rust/examples/: basic_assessment.rs  streaming.rs
WIA-AGING/api/rust/src/: client.rs  error.rs  lib.rs  streaming.rs  types.rs
WIA-AGING/api/rust/tests/: integration_test.rs
WIA-ART-006-art-authentication/api/rust/: Cargo.toml  README.md
WIA-ART-006-art-authentication/api/rust/examples/: basic_usage.rs
WIA-ART-006-art-authentication/api/rust/src/: client.rs  error.rs  lib.rs  types.rs  utils.rs  validators.rs
WIA-ART-006-art-authentication/api/rust/tests/: integration_test.rs
WIA-CHILD-007-digital-addiction-youth/api/rust/: Cargo.toml  README.md
WIA-CHILD-007-digital-addiction-youth/api/rust/examples/: basic_usage.rs
WIA-CHILD-007-digital-addiction-youth/api/rust/src/: client.rs  lib.rs  types.rs
WIA-CHILD-007-digital-addiction-youth/api/rust/tests/: integration_test.rs
WIA-CHRONIC-PAIN/api/rust/: Cargo.toml  README.md
WIA-CHRONIC-PAIN/api/rust/examples/: basic_usage.rs
WIA-CHRONIC-PAIN/api/rust/src/: client.rs  error.rs  lib.rs  types.rs  utils.rs  validators.rs
WIA-CHRONIC-PAIN/api/rust/tests/: integration_test.rs
WIA-CONTACT-010-galactic-registry/api/rust/: Cargo.toml  README.md
WIA-CONTACT-010-galactic-registry/api/rust/examples/: basic_usage.rs
WIA-CONTACT-010-galactic-registry/api/rust/src/: client.rs  error.rs  lib.rs  types.rs  utils.rs  validators.rs
WIA-CONTACT-010-galactic-registry/api/rust/tests/: integration_test.rs
WIA-DATA_QUALITY/api/rust/: Cargo.toml  README.md
WIA-DATA_QUALITY/api/rust/examples/: basic_usage.rs
WIA-DATA_QUALITY/api/rust/src/: client.rs  error.rs  lib.rs  types.rs  utils.rs  validators.rs
WIA-DATA_QUALITY/api/rust/tests/: integration_test.rs
WIA-DIRECT_AIR_CAPTURE/api/rust/: Cargo.toml  README.md
WIA-EDU/api/rust/: Cargo.toml  README.md
WIA-EDU/api/rust/src/: utils.rs
WIA-ESPORTS/api/rust/: Cargo.toml  README.md
WIA-ESPORTS/api/rust/examples/: basic_usage.rs
WIA-ESPORTS/api/rust/src/: client.rs  error.rs  lib.rs  types.rs  utils.rs  validators.rs
WIA-ESPORTS/api/rust/tests/: integration_test.rs
WIA-HYDROPONICS/api/rust/: Cargo.toml  README.md
WIA-HYDROPONICS/api/rust/examples/: basic_usage.rs
WIA-HYDROPONICS/api/rust/src/: client.rs  error.rs  lib.rs  types.rs  utils.rs  validators.rs
WIA-HYDROPONICS/api/rust/tests/: integration_test.rs
WIA-IND-001-fashion-tech/api/rust/: Cargo.toml  README.md
WIA-IND-001-fashion-tech/api/rust/examples/: basic_usage.rs
WIA-IND-001-fashion-tech/api/rust/src/: client.rs  error.rs  lib.rs  types.rs  utils.rs  validators.rs
WIA-IND-001-fashion-tech/api/rust/tests/: integration_test.rs
WIA-IND-003-wearable-fashion/api/rust/: Cargo.toml  README.md
WIA-IND-003-wearable-fashion/api/rust/examples/: basic_usage.rs
WIA-IND-003-wearable-fashion/api/rust/src/: client.rs  error.rs  lib.rs  types.rs
WIA-IND-003-wearable-fashion/api/rust/tests/: integration_test.rs
WIA-IND-010-personalized-nutrition/api/rust/: Cargo.toml  README.md
WIA-IND-010-personalized-nutrition/api/rust/examples/: basic_usage.rs
WIA-IND-010-personalized-nutrition/api/rust/src/: client.rs  lib.rs  types.rs
WIA-IND-010-personalized-nutrition/api/rust/tests/: integration_test.rs
WIA-IND-012-fitness-wearable/api/rust/: Cargo.toml  README.md
WIA-IND-012-fitness-wearable/api/rust/examples/: basic_usage.rs
WIA-IND-012-fitness-wearable/api/rust/src/: client.rs  lib.rs  types.rs  utils.rs  validators.rs
WIA-IND-012-fitness-wearable/api/rust/tests/: integration_test.rs
WIA-LANG-007-sign-language-digital/api/rust/: Cargo.toml  README.md
WIA-LANG-009-translation-quality/api/rust/: Cargo.toml  README.md
WIA-LEGAL-002-online-dispute/api/rust/: Cargo.toml  README.md
WIA-LEGAL-004-digital-evidence/api/rust/: Cargo.toml  README.md
WIA-LEGAL-005-legal-ai/api/rust/: Cargo.toml  README.md
WIA-LEGAL-008-e-notary/api/rust/: Cargo.toml  README.md
WIA-LEGAL-009-legal-data-exchange/api/rust/: Cargo.toml  README.md
WIA-LEGAL-010-international-law-digital/api/rust/: Cargo.toml  README.md
WIA-MENTAL-014-therapy-chatbot/api/rust/: Cargo.toml  README.md
WIA-NANOTECHNOLOGY/api/rust/: Cargo.toml  README.md
WIA-SENIOR-002-dementia-care/api/rust/: Cargo.toml  README.md
WIA-SOIL-MICROBIOME/api/rust/: Cargo.toml  README.md
aac/api/python/: README.md  pyproject.toml
aac/api/python/wia_aac/: __init__.py
ai/api/rust/: Cargo.toml  README.md
pubscript/: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_ROADMAP_v3.1.md  README.md
pubscript/api/: package.json
pubscript/cli/: pubscript.sh
pubscript/ebook/en/: chapter-01.html  chapter-02.html  chapter-03.html  chapter-04.html  chapter-05.html  chapter-06.html  chapter-07.html  chapter-08.html
pubscript/ebook/ko/: chapter-01.html  chapter-02.html  chapter-03.html  chapter-04.html  chapter-05.html  chapter-06.html  chapter-07.html  chapter-08.html
pubscript/examples/: WASM_DEMO_README.md  hello_world.rs  korean_pipeline.rs  wasm-demo.html
pubscript/press/: article-en.html  article-ko.html  dalle-prompts.md
pubscript/spec/: PHASE-1-DATA-FORMAT.md  PHASE-2-API-INTERFACE.md  PHASE-3-PROTOCOL.md  PHASE-4-INTEGRATION.md
pubscript/src/: lib.rs  main.rs  python.rs  wasm.rs
pubscript/src/braille/: japanese.rs  korean.rs  liblouis_wrapper.rs  mod.rs
pubscript/src/gesture/: mod.rs
pubscript/src/ir/: document.rs  metadata.rs  mod.rs  node.rs
pubscript/src/parser/: markdown.rs  mod.rs
pubscript/src/plugin/: mod.rs
pubscript/src/renderer/: braille.rs  html.rs  mod.rs  ssml.rs
pubscript/src/timeline/: mod.rs
pubscript/tables/: wia-braille-core.ctb  wia-braille-mapping.json  wia-braille-test-languages.md
pubscript/tests/: integration_test.rs
(+40050 files in other folders)
