[package]
name = "wia_pubscript"
version = "0.1.0"
edition = "2021"
authors = ["WIA Team"]
description = "Multi-sensory publishing engine with equal representations"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
pulldown-cmark = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.106", optional = true }
wasm-bindgen-futures = { version = "0.4.56", optional = true }
web-sys = { version = "0.3.83", features = ["console"], optional = true }
louis = { version = "0.6.2", optional = true }
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

[dev-dependencies]

[lib]
name = "wia_pubscript"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wia_pubscript"
path = "src/main.rs"

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"
required-features = ["api"]

[features]
default = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys"]
liblouis = ["louis"]  # Currently has compatibility issues - use built-in converters instead
python = ["pyo3"]
api = ["axum", "tokio", "tower", "tower-http"]
