[package]
name = "wia-3d-touch"
version = "1.0.0"
edition = "2021"
authors = ["WIA <standards@wia.global>"]
description = "WIA 3D Touch Standard - Rust SDK for haptic feedback and 3D touch interfaces"
license = "MIT"
repository = "https://github.com/WIA-Official/wia-standards"
keywords = ["wia", "3d-touch", "haptic", "touch", "interface"]
categories = ["api-bindings", "hardware-support", "multimedia"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[lib]
name = "wia_3d_touch"
path = "src/lib.rs"
