[package]
name = "wia-aging-sdk"
version = "1.0.0"
edition = "2021"
authors = ["WIA - World Certification Industry Association"]
description = "Rust SDK for the WIA-AGING Standard - Healthy Aging and Longevity Biomarkers"
license = "MIT"
repository = "https://github.com/WIA-Official/wia-standards"
homepage = "https://wiastandards.com/aging"
documentation = "https://docs.rs/wia-aging-sdk"
readme = "README.md"
keywords = ["wia", "aging", "longevity", "biomarkers", "healthcare"]
categories = ["api-bindings", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# WebSocket for streaming
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# URL parsing
url = "2.5"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
pretty_assertions = "1.4"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[[example]]
name = "basic_assessment"
path = "examples/basic_assessment.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"
