[package]
name = "wia-art-authentication"
version = "1.0.0"
edition = "2021"
authors = ["WIA <standards@wia.global>"]
description = "WIA Art Authentication Standard - Rust SDK for digital art verification and provenance"
license = "MIT"
repository = "https://github.com/WIA-Official/wia-standards"
keywords = ["wia", "art", "authentication", "nft", "provenance"]
categories = ["api-bindings", "cryptography", "multimedia"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[lib]
name = "wia_art_authentication"
path = "src/lib.rs"
