[package]
name = "wia-chronic-pain"
version = "1.0.0"
edition = "2021"
authors = ["WIA <standards@wia.global>"]
description = "WIA Chronic Pain Management Standard - Rust SDK"
license = "MIT"
repository = "https://github.com/WIA-Official/wia-standards"
keywords = ["wia", "chronic-pain", "medical", "health", "pain-management"]
categories = ["api-bindings", "healthcare"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[lib]
name = "wia_chronic_pain"
path = "src/lib.rs"
