[package]
name = "wia-data-quality"
version = "1.0.0"
edition = "2021"
authors = ["WIA <dev@wia.org>"]
license = "MIT"
description = "WIA-DATA_QUALITY Standard SDK - 홍익인간 (弘益人間)"
homepage = "https://wia.org"
repository = "https://github.com/WIA-Official/wia-standards"
keywords = ["wia", "data", "quality", "validation", "assessment"]
categories = ["data-structures", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[lib]
name = "wia_data_quality"
path = "src/lib.rs"
