[package]
name = "wia-esports-sdk"
version = "1.0.0"
edition = "2021"
authors = ["WIA - World Certification Industry Association"]
description = "Rust SDK for the WIA-ESPORTS Standard"
license = "MIT"
repository = "https://github.com/WIA-Official/wia-standards"
homepage = "https://wiastandards.com"
documentation = "https://docs.rs/wia-esports-sdk"
readme = "README.md"
keywords = ["wia", "game", "api", "sdk"]
categories = ["api-bindings", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = "0.4"

# Error handling
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
