[package]
name = "wia-ind-003-wearable-fashion"
version = "1.0.0"
edition = "2021"
authors = ["WIA Standards <standards@wia.org>"]
description = "Rust SDK for WIA-IND-003-wearable-fashion: Wearable Fashion Technology - 弘益人間"
license = "MIT"
repository = "https://github.com/WIA-Official/wia-standards"
keywords = ["wia", "wearable"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"

[lib]
name = "wia_ind_003_wearable_fashion"
path = "src/lib.rs"
