[package]
name = "wia-lang-009-translation-quality"
version = "1.0.0"
edition = "2021"
authors = ["WIA Standards <standards@wia.org>"]
description = "Rust SDK for WIA-LANG-009-translation-quality: Translation Quality Assessment - 弘益人間"
license = "MIT"
repository = "https://github.com/WIA-Official/wia-standards"
keywords = ["wia", "language"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"

[lib]
name = "wia_lang_009_translation_quality"
path = "src/lib.rs"
