[package]
name = "wia-senior-002-dementia-care"
version = "1.0.0"
edition = "2021"
authors = ["WIA <tech@wia.org>"]
description = "Dementia Care - 弘益人間 (Benefit All Humanity)"
license = "MIT"
repository = "https://github.com/WIA-Official/wia-standards"
keywords = ["wia", "senior, dementia, care, health"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[lib]
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
