[package]
name = "wia-soil-microbiome-sdk"
version = "1.0.0"
edition = "2021"
authors = ["WIA - World Certification Industry Association"]
description = "Rust SDK for the WIA-SOIL-MICROBIOME Standard - Soil Health and Microbiome Analysis"
license = "MIT"
repository = "https://github.com/WIA-Official/wia-standards"
homepage = "https://wiastandards.com/soil-microbiome"
documentation = "https://docs.rs/wia-soil-microbiome-sdk"
readme = "README.md"
keywords = ["wia", "soil", "microbiome", "agriculture", "sustainability"]
categories = ["api-bindings", "web-programming", "science"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# WebSocket for streaming
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# URL parsing
url = "2.5"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
pretty_assertions = "1.4"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[[example]]
name = "basic_sample"
path = "examples/basic_sample.rs"

[[example]]
name = "carbon_tracking"
path = "examples/carbon_tracking.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"
