[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wia-aac"
version = "1.0.0"
description = "WIA AAC Standard API - Python Implementation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "WIA / SmileStory Inc.", email = "contact@wia.family"}
]
keywords = ["wia", "aac", "accessibility", "assistive-technology", "eye-tracking", "bci", "emg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
requires-python = ">=3.9"
dependencies = [
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/WIA-Official/wia-aac-standard"
Documentation = "https://wia.live/aac"
Repository = "https://github.com/WIA-Official/wia-aac-standard.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["wia_aac*"]
