[package]
name = "wia-ai"
version = "1.0.0"
edition = "2021"
authors = ["WIA AI Working Group"]
description = "WIA AI Standard - Rust SDK for Artificial Intelligence Standards"
license = "MIT"
repository = "https://github.com/WIA-Official/wia-standards"
documentation = "https://docs.wia.live/ai"
keywords = ["ai", "machine-learning", "agents", "llm", "wia"]
categories = ["api-bindings", "development-tools"]
readme = "README.md"

[lib]
name = "wia_ai"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Async traits
async-trait = "0.1"

# Async streams
tokio-stream = "0.1"
async-stream = "0.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Logging
tracing = "0.1"

# WebAssembly support (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# Python bindings (optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]
python = ["pyo3"]
full = ["wasm", "python"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "agent_demo"
path = "examples/agent_demo.rs"

[[example]]
name = "wia_hub_demo"
path = "examples/wia_hub_demo.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
